Fixed a bug relating to resolving DbContext instance, added some text and improved layout

--- a/DataProcessingExperiment.Mvc/Web.config
+++ b/DataProcessingExperiment.Mvc/Web.config
@@ -17,7 +17,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" maxRequestLength="2097151" />
-    <customErrors mode="On" defaultRedirect="/Error">
+    <customErrors mode="Off" defaultRedirect="/Error">
       <!-- Not found, change redirect attribute to point to a custom page if needed -->
       <error statusCode="404" redirect="/Error" />
       <!-- Request entity too large, change redirect attribute to point to a custom page if needed -->
